# SimpleBinaryNet

./: app.py  grupo.txt  pyproject.toml
tests/: app.ipynb  app.py  cliente.ipynb  servidor.ipynb
